Adjust body height to avoid scrollbar

--- a/SaturdayQuizWeb/wwwroot/css/styles.less
+++ b/SaturdayQuizWeb/wwwroot/css/styles.less
@@ -57,12 +57,16 @@
 }
 
 html, body {
-  height: 100%;
   margin: 0;
   padding: 0;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  height: 95%;
   background: @colour-background;
   color: @colour-foreground;
 }
